--- a/info.html
+++ b/info.html
@@ -6,6 +6,7 @@
     <title>Главная</title>
     <link rel="stylesheet" href="css/header_footer.css" />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/info.css" />
   </head>
   <body>
     <script src="js/cart.js"></script>
